--- a/assignment.html
+++ b/assignment.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<title>Assignment</title>
+	<meta charset="utf-8">
+	<title>Assignment - Apple Macs</title>
 </head>
-<body>
-
-</body>
+	<body>
+		<p>The Mac (known as Macintosh until 1999) is a family of personal computers designed and marketed by Apple Inc</p>
+		<h1>Mac Mini</h1>
+		<h3>Macbook Pro</h3>
+		<h6>iMac</h6>
+	</body>
 </html>
