Footer, Main and Image Assignment
Added <footer> tag
Added <main> tag
Added <img> tag

--- a/assignment.html
+++ b/assignment.html
@@ -5,9 +5,14 @@
 	<title>Assignment - Apple Macs</title>
 </head>
 	<body>
-		<p>The Mac (known as Macintosh until 1999) is a family of personal computers designed and marketed by Apple Inc</p>
+		<main>
+			<p>The Mac (known as Macintosh until 1999) is a family of personal computers designed and marketed by Apple Inc</p>
+		<main>
 		<h1>Mac Mini</h1>
+			<img>
 		<h3>Macbook Pro</h3>
 		<h6>iMac</h6>
 	</body>
+	<footer>
+	</footer>
 </html>
