Implicit Link Assignment
Added dog Picture
Added dog.html
Ammended assignment.html with link to dog.html

--- a/assignment.html
+++ b/assignment.html
@@ -12,6 +12,7 @@
 			<img>
 		<h3>Macbook Pro</h3>
 		<h6>iMac</h6>
+		<a href="dog.html">Check out my St. Bernard</a>
 	</body>
 	<footer>
 	</footer>
