--- a/assignment.html
+++ b/assignment.html
@@ -5,6 +5,11 @@
 	<title>Assignment - Apple Macs</title>
 </head>
 	<body>
+		<nav>
+			<a href="assignment.html">Home</a>
+			<a href="dog.html">Dog Picture</a> 
+			<a href="dog_video.html">Dog Video</a> 
+		<nav>
 		<main>
 			<p>The Mac (known as Macintosh until 1999) is a family of personal computers designed and marketed by Apple Inc</p>
 		<main>
