--- a/dog_video.html
+++ b/dog_video.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Dog</title>
+	<title>Dog Video</title>
 </head>
 <body>
 	<nav>
@@ -10,7 +10,6 @@
 		<a href="dog.html">Dog Picture</a> 
 		<a href="dog_video.html">Dog Video</a> 
 	<nav>
-<img src="Saint-bernard-dog.jpg">
-<a href="assignment.html">Check out these Apple Macs</a>
+<a href="https://www.youtube.com/watch?v=9sXA64B_8D0">St. Bernard Video</a>
 </body>
 </html>
