--- a/assignment.html
+++ b/assignment.html
@@ -12,6 +12,7 @@
 		<nav>
 		<main>
 			<p>The Mac (known as Macintosh until 1999) is a family of personal computers designed and marketed by Apple Inc</p>
+			<blockquote>"I mean, quite frankly, a lot of this company, if not most of this company, runs on Macs. This is a company full of pro Mac users." Steve Jobs implied the Mac was like a truck.</blockquote>
 		<main>
 		<h1>Mac Mini</h1>
 			<img>
