--- a/dog_video.html
+++ b/dog_video.html
@@ -10,6 +10,8 @@
 		<a href="dog.html">Dog Picture</a> 
 		<a href="dog_video.html">Dog Video</a> 
 	<nav>
-<a href="https://www.youtube.com/watch?v=9sXA64B_8D0">St. Bernard Video</a>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/m4aFH4y54WI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	
+<a href="https://www.youtube.com/watch?v=9sXA64B_8D0">See another St. Bernard Video</a>
 </body>
 </html>
