Two Part Assignment - Part 1

--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<script>
-alert('Hello, World!');
-</script>
+<head>
+	<title>Javascript Alert</title>
+<body>
+	<script src="Basic_JavaScript_1.js"></script>
+</body>
 </html>
