--- a/Basic_HTML_and_Javascript_1/Basic_HTML_2.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_2.html
@@ -6,12 +6,7 @@
 	</button>
 	<p id="Irish"></p>
 
-<script>
-	function My_First_Function() {
-		var String = "Kiss me, I'm Irish!";
-		var result = String.fontcolor("green");
-		document.getElementById("Irish").innerHTML = result;
-	}
-</script>
+	<script src="Basic_JavaScript_1.js"></script>
+
 </body>
 </html>
