Basic HTML and JavaScript 1 Assignment

--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Javascript Alert</title>
-<body>
-	<script src="Basic_JavaScript_1.js"></script>
-</body>
+<html lang="en">
+	<head>
+		<title>HTML 1 Assignment</title>
+		<meta charset = "utf-8">
+	</head>	
+
+	<body>
+		<p>
+			<font face="calibri" size="4" color="red">
+			This is red specified by colour name, in Calibri Size 4.
+			</font>
+		</p>
+		<p>
+			<font color="#4A9E25">
+			This is green specified by hex code, with no face or size spec.
+			</font>
+		</p>
+		<p>
+		<b>Text in bold, </b><i>italicised text</i>and <u>underlined text</u>
+		</p>
+
+		<img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/17638/production/_124800859_gettyimages-817514614.jpg.webp" alt="Pug dog looking into camera">
+	
+		<script src="Basic_JavaScript_1.js"></script>
+
+	</body>
 </html>
