--- a/Basic_HTML_and_Javascript_1/Basic_HTML_2.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_2.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
-<body>
-	<button onclick="My_First_Function()">
+	<head>
+		<title>HTML 2</title>
+		<meta charset = "utf-8">
+	</head>
+	<body>
+		<button onclick="My_First_Function()">
 		Click me!
-	</button>
-	<p id="Irish"></p>
+		</button>
+		<p id="Irish"></p>
 
-	<script src="Basic_JavaScript_1.js"></script>
+		<script src="Basic_JavaScript_2.js"></script>
 
-</body>
+	</body>
 </html>
