--- a/project/index.html
+++ b/project/index.html
@@ -12,8 +12,8 @@
 			<div>
 				<ul>
 					<a href='#home' id='link'><li>HOME</li></a>
-					<a href='#gallery' id='link'><li>GALLERY</li>
-					<a href='#contact' id='link'><li>RESERVATIONS</li>
+					<a href='#gallery' id='link'><li>GALLERY</a></li>
+					<a href='#contact' id='link'><li>RESERVATIONS</a></li>
 				</ul>
 			</div>
 		</div>
