document.getElementsByClassName() Method Assignment

--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -21,6 +21,11 @@
 		</p>
 
 		<img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/17638/production/_124800859_gettyimages-817514614.jpg.webp" alt="Pug dog looking into camera">
+
+		<h1 class="Click">This text will change!</h1>
+		<h3 class="Click">This text will not change</h3>
+		<button onclick="Hello_World_Function()">Click me!</button>
+
 	
 		<script src="Basic_JavaScript_1.js"></script>
 
