Canvas Element Assignment

--- a/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_HTML_1.html
@@ -25,6 +25,9 @@
 		<h1 class="Click">This text will change!</h1>
 		<h3 class="Click">This text will not change</h3>
 		<button onclick="Hello_World_Function()">Click me!</button>
+		</br></br>
+		<canvas id="ID_Name" width="500" height="250" style="border:5px solid black;"></canvas>
+
 
 	
 		<script src="Basic_JavaScript_1.js"></script>
